# rzd-bot-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
.github/workflows/: docker-publish.yml
migrations/: 20240106103201_init_tasks_table.up.sql
migrations/2024-01-09-132321_create_tasks/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  rzd.rs  schema.rs  utils.rs
src/static/: dimok.txt  гимн_люфтваффе.txt
