[package]
name = "rzd_tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "ctrlc_handler", "webhooks", "webhooks-axum", "cache-me", "native-tls"] }
chrono = {version = "0.4.31", features = ["default"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["cookies", "gzip", "json", "multipart"] }
serde_json = { version = "1.0.110" }
url = "2.5.0"
serde = { version = "1.0.194", features = ["derive"] }
async-recursion = "1.0.5"
env_logger = "0.10.1"
fake-useragent = "0.1.3"
diesel = { version = "2.1.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json", "chrono", "r2d2"]}
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }